--- a/pos-client/package.json
+++ b/pos-client/package.json
@@ -1,6 +1,21 @@
 {
+  "name": "fe-client",
+  "version": "0.1.0",
+  "private": true,
+  "scripts": {
+    "dev": "next dev -p 8000",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
+  },
   "dependencies": {
-    "bootstrap": "^5.3.0-alpha3",
-    "sweetalert": "^2.1.2"
+    "axios": "^1.4.0",
+    "eslint": "8.40.0",
+    "eslint-config-next": "13.4.1",
+    "next": "13.4.1",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-toastify": "^10.0.5",
+    "sweetalert2": "^11.10.8"
   }
 }
